Reorder Azure Automation Account module upload to be earlier Fixes #23

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -856,6 +856,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Add Azure Automation Microsoft.Graph.Authentication Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "New-AzAutomationModule  `\n",
+    "    -AutomationAccountName $AutomationAccountName  `\n",
+    "    -Name \"Microsoft.Graph.Authentication\"  `\n",
+    "    -ContentLink \"https://devopsgallerystorage.blob.core.windows.net:443/packages/microsoft.graph.authentication.2.12.0.nupkg\"  `\n",
+    "    -ResourceGroupName $ResourceGroupName  `\n",
+    "    -RuntimeVersion 7.2 | Select Name, ProvisioningState"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check if the module is already installed (might take a few minutes), you can proceed to the next step while the module is installing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Get-AzAutomationModule  `\n",
+    "    -AutomationAccountName $AutomationAccountName  `\n",
+    "    -Name \"Microsoft.Graph.Authentication\"  `\n",
+    "    -ResourceGroupName $ResourceGroupName  `\n",
+    "    -RuntimeVersion 7.2 | Select Name, ProvisioningState"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Add Certificate to Automation Account"
    ]
   },
@@ -1003,54 +1044,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add Azure Automation Microsoft.Graph.Authentication Module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "New-AzAutomationModule  `\n",
-    "    -AutomationAccountName $AutomationAccountName  `\n",
-    "    -Name \"Microsoft.Graph.Authentication\"  `\n",
-    "    -ContentLink \"https://devopsgallerystorage.blob.core.windows.net:443/packages/microsoft.graph.authentication.2.12.0.nupkg\"  `\n",
-    "    -ResourceGroupName $ResourceGroupName  `\n",
-    "    -RuntimeVersion 7.2 | Select Name, ProvisioningState"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Get-AzAutomationModule  `\n",
-    "    -AutomationAccountName $AutomationAccountName  `\n",
-    "    -Name \"Microsoft.Graph.Authentication\"  `\n",
-    "    -ResourceGroupName $ResourceGroupName  `\n",
-    "    -RuntimeVersion 7.2 | Select Name, ProvisioningState"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Import Azure Automation Runbook"
    ]
   },
@@ -1137,6 +1130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- View and modify the Modules\n",
     "- View and modify the Variables\n",
     "- View and modify the Schedule\n",
     "- Test run the Runbook"
