Add required scopes for MgGraph Powershell App Fixes #28

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -216,9 +216,15 @@
    },
    "outputs": [],
    "source": [
-    "Connect-MgGraph -TenantId $TenantID -NoWelcome\n",
+    "$Scopes = (\n",
+    "'Device.ReadWrite.All',\n",
+    "'DeviceManagementManagedDevices.ReadWrite.All',\n",
+    "'DeviceManagementServiceConfig.ReadWrite.All',\n",
+    "'DeviceManagementConfiguration.ReadWrite.All'\n",
+    ")\n",
+    "Connect-MgGraph -TenantId $TenantID -NoWelcome -Scopes $Scopes\n",
     "$mgcontext = Get-MgContext\n",
-    "\n",
+    "S\n",
     "# Redacted Output\n",
     "$mgcontext | Select AppName, Scopes, AuthType, TokenCredentialType | Format-List"
    ]
@@ -862,7 +868,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
    "outputs": [],
    "source": [
     "New-AzAutomationModule  `\n",
@@ -883,7 +896,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
    "outputs": [],
    "source": [
     "Get-AzAutomationModule  `\n",
